# duckdb-haskell

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MIGRATION.md  README.md  Setup.hs  cabal.project  duckdb-ffi.cabal
.github/workflows/: docker-ci.yml
cbits/: Makefile  duckdb_stub.c
docs/: fetch.py
duckdb-ffi/: CHANGELOG.md  Setup.hs  duckdb-ffi.cabal
duckdb-ffi/cbits/: Makefile  duckdb_stub.c
duckdb-ffi/docs/: c_api.md
duckdb-ffi/scripts/: arrow_deprecated_probe.py  gen_ffi_modules.py  kill-tests.sh  untested.py
duckdb-ffi/src/Database/DuckDB/: FFI.hs
duckdb-ffi/src/Database/DuckDB/FFI/: AggregateFunctions.hs  Appender.hs  Arrow.hs  BindValues.hs  CastFunctions.hs  Catalog.hs  Configuration.hs  CopyFunctions.hs  DataChunk.hs  Deprecated.hs  ErrorData.hs  ExecutePrepared.hs  Expression.hs  ExtractStatements.hs  FileSystem.hs  Helpers.hs  Logging.hs  LogicalTypes.hs  OpenConnect.hs  PendingResult.hs  PreparedStatements.hs  ProfilingInfo.hs  QueryExecution.hs  ReplacementScans.hs  ResultFunctions.hs  SafeFetch.hs  ScalarFunctions.hs  SelectionVector.hs  StreamingResult.hs  TableDescription.hs  TableFunctions.hs  Threading.hs  Types.hs  Validity.hs  ValueInterface.hs  Vector.hs
duckdb-ffi/src/Database/DuckDB/FFI/Deprecated/: Appender.hs  Arrow.hs  ExecutePrepared.hs  PendingResult.hs  QueryExecution.hs  ResultFunctions.hs  SafeFetch.hs  StreamingResult.hs
duckdb-ffi/test/: AggregateFunctionsTest.hs  AppenderTest.hs  ArrowInterfaceDeprecatedTests.hs  ArrowInterfaceTest.hs  BindValuesTest.hs  CastFunctionsTest.hs  ErrorDataTest.hs  ExecutePreparedStatementsTest.hs  ExtractStatementsTest.hs  HelpersTest.hs  LogicalTypesTest.hs  Main.hs  PendingResultTest.hs  ProfilingInfoTest.hs  QueryExecutionTest.hs  ReplacementScansTest.hs  ResultFunctionsTest.hs  SafeFetchTest.hs  ScalarFunctionsTest.hs  SelectionVectorTest.hs  StreamingResultTest.hs  TableDescriptionTest.hs  TableFunctionsTest.hs  ThreadingTest.hs  Utils.hs  ValueInterfaceTest.hs  VectorTest.hs
duckdb-simple/: CHANGELOG.md  NOTES.md  PLAN.md  README.md  duckdb-simple.cabal
duckdb-simple/bench/: Bench.hs
duckdb-simple/src/Database/DuckDB/: Simple.hs
duckdb-simple/src/Database/DuckDB/Simple/: Appender.hs  Catalog.hs  Config.hs  Copy.hs  FileSystem.hs  FromField.hs  FromRow.hs  Function.hs  Generic.hs  Internal.hs  Logging.hs  LogicalRep.hs  Materialize.hs  Ok.hs  ToField.hs  ToRow.hs  Types.hs
duckdb-simple/src/Database/DuckDB/Simple/Appender/: Generic.hs
duckdb-simple/src/Database/DuckDB/Simple/Internal/: ValueHelpers.hs
duckdb-simple/test/: Appender.hs  Properties.hs  Spec.hs
scripts/: build-ghc-matrix.sh  kill-tests.sh  release.sh
src/Database/DuckDB/: FFI.hs
src/Database/DuckDB/FFI/: AggregateFunctions.hs  Appender.hs  Arrow.hs  BindValues.hs  CastFunctions.hs  Configuration.hs  DataChunk.hs  ErrorData.hs  ExecutePrepared.hs  Expression.hs  ExtractStatements.hs  Helpers.hs  LogicalTypes.hs  OpenConnect.hs  PendingResult.hs  PreparedStatements.hs  ProfilingInfo.hs  QueryExecution.hs  ReplacementScans.hs  ResultFunctions.hs  SafeFetch.hs  ScalarFunctions.hs  SelectionVector.hs  StreamingResult.hs  TableDescription.hs  TableFunctions.hs  Threading.hs  Types.hs  Validity.hs  ValueInterface.hs  Vector.hs
test/: AggregateFunctionsTest.hs  AppenderTest.hs  ArrowInterfaceDeprecatedTests.hs  ArrowInterfaceTest.hs  BindValuesTest.hs  CastFunctionsTest.hs  ConfigurationTest.hs  DataChunkTest.hs  ErrorDataTest.hs  ExecutePreparedStatementsTest.hs  ExpressionTest.hs  ExtractStatementsTest.hs  HelpersTest.hs  LogicalTypesTest.hs  Main.hs  OpenConnectTest.hs  PendingResultTest.hs  PreparedStatementsTest.hs  ProfilingInfoTest.hs  QueryExecutionTest.hs  ReplacementScansTest.hs  ResultFunctionsTest.hs  SafeFetchTest.hs  ScalarFunctionsTest.hs  SelectionVectorTest.hs  StreamingResultTest.hs  TableDescriptionTest.hs  TableFunctionsTest.hs  ThreadingTest.hs  Utils.hs  ValidityMaskTest.hs  ValueInterfaceTest.hs  VectorTest.hs
