cabal-version:      2.4
name:               duckdb-simple
version:            0.1.0.0
synopsis:           High-level DuckDB interface inspired by sqlite-simple
description:        High-level DuckDB interface inspired by sqlite-simple, providing connection management, parameter binding, and typed query results. See README.md for details.
homepage:           https://github.com/duckdb/duckdb
bug-reports:        https://github.com/duckdb/duckdb/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Matthias Pall Gissurarson, DPella AB
maintainer:         matti@dpella.io,
                    mpg@mpg.is,
                    lobo@dpella.io
category:           Database
build-type:         Simple
extra-doc-files: README.md

library
  exposed-modules:
      Database.DuckDB.Simple
      Database.DuckDB.Simple.Function
      Database.DuckDB.Simple.FromField
      Database.DuckDB.Simple.FromRow
      Database.DuckDB.Simple.Internal
      Database.DuckDB.Simple.Ok
      Database.DuckDB.Simple.ToField
      Database.DuckDB.Simple.ToRow
      Database.DuckDB.Simple.Types
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , bytestring
    , duckdb-ffi
    , text
    , transformers

test-suite duckdb-simple-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , duckdb-simple
    , text
    , tasty >=1.4 && <1.6
    , tasty-hunit >=0.10 && <0.12
