cabal-version:      3.4
name:               duckdb-simple
version:            0.1.1.2
license:            MPL-2.0
license-file:       LICENSE
author:             Matthias Pall Gissurarson
maintainer:        mpg@mpg.is
category:           Database
build-type:         Simple
extra-doc-files: README.md
homepage:       https://github.com/Tritlo/duckdb-haskell
bug-reports:    https://github.com/Tritlo/duckdb-haskell/issues
synopsis:           Haskell FFI bindings for DuckDB
description:
    This library provides a mid-level interface for interacting with DuckDB,
    in the style of other "simple" libraries such as sqlite-simple and
    postgresql-simple.
    .
    Tested with DuckDB version 1.4.0, and 1.4.0.
extra-doc-files:    CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/Tritlo/duckdb-haskell.git
  subdir:  duckdb-simple



library
  exposed-modules:
      Database.DuckDB.Simple
      Database.DuckDB.Simple.Function
      Database.DuckDB.Simple.FromField
      Database.DuckDB.Simple.FromRow
      Database.DuckDB.Simple.Internal
      Database.DuckDB.Simple.Ok
      Database.DuckDB.Simple.ToField
      Database.DuckDB.Simple.ToRow
      Database.DuckDB.Simple.Types
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , bytestring >= 0.11 && <0.12
    , containers >= 0.6 && <0.7
    , duckdb-ffi >= 1.4 && <1.5
    , text >= 2.0 && <2.1
    , transformers >= 0.6 && <0.7
    , uuid >=1.3 && <1.4
    , time >= 1.12 && <1.13

test-suite duckdb-simple-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , duckdb-simple
    , bytestring
    , containers >= 0.6 && <0.7
    , text
    , tasty >=1.4 && <1.6
    , tasty-hunit >=0.10 && <0.12
    , tasty-quickcheck >=0.10 && <0.11
    , tasty-expected-failure >=0.12 && <0.13
    , QuickCheck >=2.14 && <2.15
    , uuid >=1.3 && <1.4
    , time
