cabal-version: 3.4
name: duckdb-simple
version: 0.1.5.0
license: MPL-2.0
license-file: LICENSE
author: Matthias Pall Gissurarson
maintainer: mpg@mpg.is
category: Database
build-type: Simple
tested-with:
  ghc ==9.6.*
  ghc ==9.8.*
  ghc ==9.10.*
  ghc ==9.12.*
  ghc ==9.14.*

extra-doc-files: README.md
homepage: https://github.com/Tritlo/duckdb-haskell
bug-reports: https://github.com/Tritlo/duckdb-haskell/issues
synopsis: Haskell FFI bindings for DuckDB
description:
  This library provides a mid-level interface for interacting with DuckDB,
  in the style of other "simple" libraries such as sqlite-simple and
  postgresql-simple.
  .
  Tested with DuckDB version 1.5.0.

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/Tritlo/duckdb-haskell.git
  subdir: duckdb-simple

library
  exposed-modules:
    Database.DuckDB.Simple
    Database.DuckDB.Simple.Catalog
    Database.DuckDB.Simple.Config
    Database.DuckDB.Simple.Copy
    Database.DuckDB.Simple.FileSystem
    Database.DuckDB.Simple.FromField
    Database.DuckDB.Simple.FromRow
    Database.DuckDB.Simple.Function
    Database.DuckDB.Simple.Generic
    Database.DuckDB.Simple.Internal
    Database.DuckDB.Simple.Logging
    Database.DuckDB.Simple.LogicalRep
    Database.DuckDB.Simple.Ok
    Database.DuckDB.Simple.ToField
    Database.DuckDB.Simple.ToRow
    Database.DuckDB.Simple.Types

  other-modules:
    Database.DuckDB.Simple.Materialize

  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    array >=0.5 && <0.6,
    base >=4.14 && <5,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.9,
    duckdb-ffi >=1.5.0.0 && <1.6,
    text >=2.0 && <2.2,
    time >=1.12 && <1.16,
    transformers >=0.6 && <0.7,
    uuid >=1.3 && <1.4,

test-suite duckdb-simple-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Properties
  default-language: Haskell2010
  build-depends:
    QuickCheck >=2.14 && <2.16,
    array >=0.5 && <0.6,
    base >=4.14 && <5,
    bytestring,
    containers >=0.6 && <0.9,
    directory >=1.3 && <1.4,
    duckdb-ffi >=1.5.0.0 && <1.6,
    duckdb-simple,
    tasty >=1.4 && <1.6,
    tasty-expected-failure >=0.12 && <0.13,
    tasty-hunit >=0.10 && <0.12,
    tasty-quickcheck >=0.10 && <0.12,
    text,
    time,
    uuid >=1.3 && <1.4,
